# Profit_Informaticup2023

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md
.github/workflows/: build.yml  ci.yml  clang-format.yml  clang-tidy.yml  cmake.yml  test.yml
include/: Combiner.hpp  Conveyor.hpp  Deposit.hpp  Factory.hpp  Field.hpp  FieldState.hpp  InputParser.hpp  Mine.hpp  NullObject.hpp  ObjectInterface.hpp  Obstacle.hpp  assert.hpp  connect.hpp  connected_component.hpp  example_tasks.hpp  field.hpp  field_state.hpp  landscape.hpp  mdkp.hpp  parsing.hpp  placeable.hpp  product.hpp  resource_type.hpp  rotation.hpp  score.hpp  serialization.hpp  solver.hpp  subtype.hpp  two_dimensional_vector.hpp  utils.hpp  vec2.hpp  worker.hpp
include/IO/: parsing.hpp  serialization.hpp
include/constants/: rotation.hpp  subtype.hpp
include/data_structures/: vec2.hpp
include/fields/: component_map.hpp  connected_component.hpp  distance_map.hpp  field.hpp  occupancy_map.hpp  placement_map.hpp
include/geometry/: coordinate.hpp  rectangle.hpp  two_dimensional_vector.hpp  vec2.hpp  vector.hpp
include/io/: parsing.hpp  serialization.hpp
include/miscellany/: assert.hpp  connected_component.hpp  two_dimensional_vector.hpp
include/objects/: landscape.hpp  placeable.hpp  product.hpp  resource_type.hpp
include/resources/: example_tasks.hpp
src/: Combiner.cpp  Conveyor.cpp  Deposit.cpp  Factory.cpp  Field.cpp  InputParser.cpp  Mine.cpp  NullObject.cpp  ObjectInterface.cpp  Obstacle.cpp  main.cpp  solver.cpp
tasks/: 001.task.json  002.task.json  circle.json  constrained_to_mine_and_conveyor3.json  constrained_to_mine_and_conveyors.json  divide_and_conquer.json  impossible_due_to_self_intersection.json  multiple_connected_components.json  tricky_conveyor_connection.json  vertically_split_map.json  vertically_splitted_map.json  very_strong_constrained.json
tests/: .clang-tidy  CMakeLists.txt  connect_test.cpp  connected_component_test.cpp  distance_map_test.cpp  field_state_test.cpp  fields_test.cpp  geometry_test.cpp  mdkp_test.cpp  occupancy_map_test.cpp  parsing_test.cpp  placement_map_test.cpp  score_test.cpp  serialization_test.cpp  solver_test.cpp  test_serialization.cpp
tests/src/: test_NullObject.cpp
